--- a/jsconfig.json
+++ b/jsconfig.json
@@ -10,6 +10,7 @@
         "views/*": ["./src/views/*"],
         "utils/*": ["./src/utils/*"],
         "api/*": ["./src/api/*"],
+        "stores/*": ["./src/stores/*"],
       }
     },
     "exclude": [
