--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@lukemorales/query-key-factory": "^1.3.2",
     "@tanstack/vue-query": "^4.29.20",
     "pinia": "^2.1.3",
+    "socket.io-client": "^4.7.1",
     "vue": "^3.3.4",
     "vue-router": "^4.2.2"
   },
