--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@lukemorales/query-key-factory": "^1.3.2",
     "@mdi/font": "^7.2.96",
+    "@stripe/stripe-js": "^1.54.1",
     "@tanstack/vue-query": "^4.29.20",
     "jsonwebtoken": "^9.0.1",
     "pinia": "^2.1.3",
