--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@lukemorales/query-key-factory": "^1.3.2",
+    "@stripe/stripe-js": "^1.54.1",
     "@tanstack/vue-query": "^4.29.20",
     "pinia": "^2.1.3",
     "socket.io-client": "^4.7.1",
