--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "@tanstack/vue-query": "^4.29.20",
     "pinia": "^2.1.3",
     "socket.io-client": "^4.7.1",
+    "vee-validate": "^4.10.8",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.2"
+    "vue-router": "^4.2.2",
+    "vue3-styled-components": "^1.2.1",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
