--- a/package.json
+++ b/package.json
@@ -14,16 +14,20 @@
   },
   "dependencies": {
     "@lukemorales/query-key-factory": "^1.3.2",
+    "@mdi/font": "^7.2.96",
     "@tanstack/vue-query": "^4.29.20",
     "pinia": "^2.1.3",
+    "sass": "^1.64.1",
     "socket.io-client": "^4.7.1",
     "vee-validate": "^4.10.8",
     "vue": "^3.3.4",
     "vue-router": "^4.2.2",
     "vue3-styled-components": "^1.2.1",
+    "vuetify": "^3.3.9",
     "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.0",
     "@rushstack/eslint-patch": "^1.2.0",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vitejs/plugin-vue-jsx": "^3.0.1",
