--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@lukemorales/query-key-factory": "^1.3.2",
     "@mdi/font": "^7.2.96",
     "@tanstack/vue-query": "^4.29.20",
+    "jsonwebtoken": "^9.0.1",
     "pinia": "^2.1.3",
     "sass": "^1.64.1",
     "socket.io-client": "^4.7.1",
