--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vee-validate": "^4.10.8",
     "vue": "^3.3.4",
     "vue-router": "^4.2.2",
+    "vue-styled-components": "^1.6.0",
     "vue3-styled-components": "^1.2.1",
     "vuetify": "^3.3.9",
     "yup": "^1.2.0"
