--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   "dependencies": {
     "@lukemorales/query-key-factory": "^1.3.2",
     "@mdi/font": "^7.2.96",
-    "@tanstack/vue-query": "^4.29.20",
     "@stripe/stripe-js": "^1.54.1",
+    "@tanstack/vue-query": "^4.29.20",
     "jsonwebtoken": "^9.0.1",
     "pinia": "^2.1.3",
     "sass": "^1.64.1",
@@ -37,11 +37,12 @@
     "@vue/eslint-config-prettier": "^7.1.0",
     "@vue/test-utils": "^2.3.2",
     "cypress": "^12.14.0",
-    "eslint": "^8.39.0",
+    "eslint": "^8.50.0",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-cypress": "^2.13.3",
     "eslint-plugin-vue": "^9.11.0",
     "jsdom": "^22.1.0",
-    "prettier": "^2.8.8",
+    "prettier": "^3.0.3",
     "start-server-and-test": "^2.0.0",
     "vite": "^4.3.9",
     "vitest": "^0.32.0"
